feat(capture): add player capture functionality with ghost camera system
- Integrated Ender Dragon part entity handling in sweep operations